--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 # JPA Configuration​
+server.port=8090
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
@@ -6,4 +7,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialec
 # PostgreSQL Configuration​
 spring.datasource.username=postgres
 spring.datasource.password=​
-spring.datasource.url=jdbc:postgresql://localhost:6432/intern_training
+spring.datasource.url=jdbc:postgresql://localhost:5432/training
