--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
 		</dependency>
 	</dependencies>
 
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.13</version>
+		<scope>test</scope>
+	</dependency>
+
 	<build>
 		<plugins>
 			<plugin>
